--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    hello world i am anthony.
+   <a href="webring.html">here is my Webring</a>
+   <a href="https://google.com"></a>
 </body>
 </html>
 
